# hyprfocus

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: aur.yml  rust.yml
AUR/: .SRCINFO  PKGBUILD
aur/: .SRCINFO  PGKBUILD  PKGBUILD
examples/: hyprlog.conf
hyprfocus/: Cargo.toml
hyprfocus/src/: daemon_commands.rs  log_parsing.rs  log_reader.rs  main.rs  view.rs
hyprfocusd/: Cargo.toml
hyprfocusd/src/: idle_socket.rs  log_writer.rs  main.rs  shutdown.rs  socket.rs
hyprlog/: Cargo.toml
hyprlog/src/: config.rs  daemon_commands.rs  log_parsing.rs  log_reader.rs  main.rs  model.rs  settings.rs  tui.rs  view.rs
hyprlogd/: Cargo.toml
hyprlogd/src/: log_writer.rs  main.rs  shutdown.rs  socket.rs
src/: main.rs
src/hyprlog/: config.rs  interval.rs  log_reader.rs  view.rs
src/hyprlogd/: main.rs
