[package]
name = "hyprfocusd"
version = "0.1.0"
edition = "2024"
description = "Hyprland focus logger daemon"
license = "MIT"

[dependencies]
chrono = "0.4.40"
hyprland = "0.4.0-beta.1"
tokio = { version = "1.44.1",  features = ["full"] }
directories = "6.0.0"
notify-rust = "4.11.7"
zbus = { version = "5.9", default-features = false, features = ["tokio"] }
futures-util = "0.3.31"              
mosaic-model = "0.1.1"              
