[package]
name = "hyprlog"
version = "0.1.0"
edition = "2024"
description = "Hyprland focus logger CLI"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"
color-eyre = "0.6.5"
colored = "3.0.0"
crossterm = "0.29.0"
csv = "1.3.1"
directories = "6.0.0"
notify-rust = "4.11.7"
ratatui = "0.30.0"
terminal_size = "0.4.2"
