[package]
name = "hyprlogd"
version = "0.1.0"
edition = "2021"
description = "Hyprland focus logger daemon"
license = "MIT"

[dependencies]
chrono = "0.4.40"
hyprland = "0.4.0-beta.3"
tokio = { version = "1.44.1",  features = ["full"] }
directories = "6.0.0"
zbus = { version = "=4.4.0", default-features = false, features = ["tokio"] }
zvariant = "=4.2.0"
zvariant_utils = "=2.1.0"
futures-util = "0.3.31"              
